--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,15 +13,33 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
-		<servlet-name>Login</servlet-name>
-		<servlet-class>controller.LoginCheckServlet</servlet-class>
+		<servlet-name>UserLogin</servlet-name>
+		<servlet-class>controller.UserLoginServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Login</servlet-name>
-		<url-pattern>/Login.do</url-pattern>
+		<servlet-name>UserLogin</servlet-name>
+		<url-pattern>/UserLogin.do</url-pattern>
 	</servlet-mapping>
-	
-		<servlet>
+
+	<servlet>
+		<servlet-name>AdminLogin</servlet-name>
+		<servlet-class>controller.AdminLoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AdminLogin</servlet-name>
+		<url-pattern>/AdminLogin.do</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>Register</servlet-name>
+		<servlet-class>controller.RegisterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Register</servlet-name>
+		<url-pattern>/Register.do</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
 		<servlet-name>LoginOut</servlet-name>
 		<servlet-class>controller.LoginOutServlet</servlet-class>
 	</servlet>
