--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,51 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	id="WebApp_ID" version="3.1">
-	<display-name>huashan_bookstore</display-name>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
-	</welcome-file-list>
-	<servlet>
-		<servlet-name>UserLogin</servlet-name>
-		<servlet-class>controller.UserLoginServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>UserLogin</servlet-name>
-		<url-pattern>/UserLogin.do</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>AdminLogin</servlet-name>
-		<servlet-class>controller.AdminLoginServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>AdminLogin</servlet-name>
-		<url-pattern>/AdminLogin.do</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>Register</servlet-name>
-		<servlet-class>controller.RegisterServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Register</servlet-name>
-		<url-pattern>/Register.do</url-pattern>
-	</servlet-mapping>
-
-	<servlet>
-		<servlet-name>LoginOut</servlet-name>
-		<servlet-class>controller.LoginOutServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LoginOut</servlet-name>
-		<url-pattern>/LoginOut.do</url-pattern>
-	</servlet-mapping>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>huashan_bookstore</display-name>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>UserLogin</servlet-name>
+    <servlet-class>controller.UserLoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserLogin</servlet-name>
+    <url-pattern>/UserLogin.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>AdminLogin</servlet-name>
+    <servlet-class>controller.AdminLoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AdminLogin</servlet-name>
+    <url-pattern>/AdminLogin.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>Register</servlet-name>
+    <servlet-class>controller.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/Register.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>LoginOut</servlet-name>
+    <servlet-class>controller.LoginOutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginOut</servlet-name>
+    <url-pattern>/LoginOut.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>ChangeCommodity</servlet-name>
+    <servlet-class>controller.ChangeCommodityServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChangeCommodity</servlet-name>
+    <url-pattern>/ChangeCommodity.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>DeleteCommodity</servlet-name>
+    <servlet-class>controller.DeleteCommodityServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteCommodity</servlet-name>
+    <url-pattern>/DeleteCommodity.do</url-pattern>
+  </servlet-mapping>
 </web-app>
