添加购物车，去掉无用的session

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -65,4 +65,12 @@
     <servlet-name>AddCommodity</servlet-name>
     <url-pattern>/AddCommodity.do</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>AddCart</servlet-name>
+    <servlet-class>controller.AddCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddCart</servlet-name>
+    <url-pattern>/AddCart.do</url-pattern>
+  </servlet-mapping>
 </web-app>
