--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -73,4 +73,28 @@
     <servlet-name>AddCart</servlet-name>
     <url-pattern>/AddCart.do</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>ChangeCart</servlet-name>
+    <servlet-class>controller.ChangeCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChangeCart</servlet-name>
+    <url-pattern>/ChangeCart.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>DeleteCart</servlet-name>
+    <servlet-class>controller.DeleteCartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>DeleteCart</servlet-name>
+    <url-pattern>/DeleteCart.do</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>Bill</servlet-name>
+    <servlet-class>controller.BillServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Bill</servlet-name>
+    <url-pattern>/Bill.do</url-pattern>
+  </servlet-mapping>
 </web-app>
