--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -121,4 +121,12 @@
     <servlet-name>AdminCancel</servlet-name>
     <url-pattern>/AdminCancel.do</url-pattern>
   </servlet-mapping>
+    <servlet>
+    <servlet-name>SearchBook</servlet-name>
+    <servlet-class>controller.SearchBookServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchBook</servlet-name>
+    <url-pattern>/SearchBook.do</url-pattern>
+  </servlet-mapping>
 </web-app>
